tests/NormalTests/paczka2/big_fuzzy/72211903.err
Error in line 1: p6T S470 02,6
Error in line 5: p6T S470 6,5
Error in line 14: jEmpw S470 5,7
Error in line 34: wAlgDpkAMc9 A876 12,3
Error in line 42: wAlgDpkAMc9 S786 68,3
Error in line 44: a7LaBEF S470 30,3
Error in line 67: wAlgDpkAMc9 A876 46,8
Error in line 88: wAlgDpkAMc9 S470 239,8
Error in line 87: A876 S645 45,7
Error in line 103: a7LaBEF S645 93,2
Error in line 106: a7LaBEF S470 36,5
Error in line 112: wAlgDpkAMc9 S786 66,2
Error in line 120: FYEkge S645 78,9
Error in line 117: jEmpw S470 10,4
Error in line 124: p6T A876 85,6
Error in line 129: jEmpw S786 1,5
Error in line 146: FGral S786 36,1
Error in line 150: p6T S786 96,7
Error in line 153: FYEkge A876 8,2
Error in line 165: A876 S645 22,15
Error in line 163: A876 S645 11,8
Error in line 171: A876 S470 10,3
Error in line 178: a7LaBEF S645 29,7
Error in line 185: wAlgDpkAMc9 S470 8,3
Error in line 184: a7LaBEF S470 75,0
Error in line 193: p6T S76 295,3
Error in line 209: a7LaBEF S786 710
Error in line 191: p6T S786 79,8
Error in line 203: FGral S470 6,9
Error in line 214: FYEkge S786 48,2
Error in line 216: p6T A876 70,5
Error in line 219: p6T S470 19,5
Error in line 225: FYEkge S4_0 38,6
Error in line 224: FYEkge A876 86,4
Error in line 207: wAlgDpkAMc9 S786 54,9
Error in line 226: FYEkge S470 15,4
Error in line 241: FGral S645 46,6
